# string_constant

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  basic_usage.cpp  compile_time_fmt.cpp  string_view.cpp
src/string_constant/: string_constant.hpp
